Update c5-fixes.scss
Added to correct image misalignment in blocks when dragging and dropping.

--- a/src/css/c5-fixes.scss
+++ b/src/css/c5-fixes.scss
@@ -5,4 +5,7 @@
 .ccm-ui img {
     display: initial;
 }
+.ccm-block-edit-drag img{
+    display: initial;
+}
 /*! purgecss end ignore */
